--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -7,6 +7,7 @@
     "backend": "Backend Developer",
     "fullstack": "Fullstack Developer",
     "designer": "UI/UX designer",
+    "devops": "DevOps",
     "PM": "Project Manager",
     "PO": "Product Owner",
     "other": "Other Position",
@@ -20,6 +21,7 @@
   "Auth": {
     "username": "Nazwa użytkownika",
     "password": "Hasło",
+    "username_or_email": "Nazwa użytkownika lub email",
     "retype_password": "Powtórz hasło",
     "register": "Zarejestruj się",
     "log_in": "Zaloguj się",
@@ -43,10 +45,36 @@
     "edit": "Edytuj",
     "author": "Autor: {{author}}",
     "project_name": "Nazwa Projektu",
-    "positions_needed": "Wymagane Stanowiska:",
-    "description": "Opis:",
+    "positions_needed": "Wymagane Stanowiska",
+    "description": "Opis",
     "description_placeholder": "Dodaj zwięzły opis projektu",
     "create_project": "Stwórz Projekt",
     "new_project": "Nowy Projekt"
+  },
+  "Codes": {
+    "SOMETHING_WENT_WRONG": "Coś poszło nie tak",
+    "USERNAME_ALREADY_TAKEN": "Nazwa użytkownika zajęta",
+    "EMAIL_ALREADY_REGISTERED": "Adres email został już zarejestrowany",
+    "VALIDATION_ERROR": "Błąd walidacji",
+    "INVALID_CAPTCHA": "Błąd captcha, odśwież stronę",
+    "MISSING_CREDENTIALS": "Brak danych autoryzacyjnych",
+    "INVALID_CREDENTIALS": "Niepoprawny email lub hasło",
+    "INVALID_VERIFICATION_CODE": "Niepoprawny kod weryfikacyjny",
+    "VERIFICATION_CODE_EXPIRED": "Kod weryfikacyjny wygasł",
+    "USER_ALREADY_VERIFIED": "Użytkownik został już zweryfikowany",
+    "USER_NOT_VERIFIED": "Użytkownik nie jest zweryfikowany",
+    "UNAUTHORIZED": "Brak autoryzacji",
+    "NOT_FOUND": "Nie znaleziono",
+    "BAD_REQUEST": "Nieprawidłowe żądanie",
+
+    "SUCCESS": "Sukces",
+    "LOGIN_SUCCESS": "Zalogowano poprawnie",
+    "REGISTER_SUCCESS": "Rejestracja przebiegła pomyślnie",
+    "VERIFICATION_SUCCESS": "Weryfikacja udała się",
+    "PROJECT_CREATED": "Projekt stworzony",
+    "PROFILE_DATA_RECEIVED": "Pobrano dane profilowe",
+    "PROJECT_DETAILS_RECEIVED": "Pobrano detale projektu",
+    "PROJECTS_LIST_RECEIVED": "Pobrano stronnicowaną listę projektów",
+    "LOGOUT": "Wylogowano"
   }
 }
